fixed some broken css in hitta medarbetare

--- a/components/cards/search-card/_search-card.scss
+++ b/components/cards/search-card/_search-card.scss
@@ -432,10 +432,12 @@
   }
 
   &__open-label {
+    font-size: 14px;
     display: inline;
   }
 
   &__close-label {
+    font-size: 14px;
     display: none;
   }
 }
